--- a/EduPortal/Views/Subject/Edit.cshtml
+++ b/EduPortal/Views/Subject/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model EduPortal.Core.Entity.Subject
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
@@ -14,6 +14,8 @@
         <h4>Subject</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.ID)
+
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -41,7 +43,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ClassLevel, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.ClassLevelId,new SelectList(ViewBag.ClassLevel, "ID", "Name"), new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ClassLevelId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ClassLevel, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -58,7 +60,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
