--- a/EduPortal/Views/Branch/Details.cshtml
+++ b/EduPortal/Views/Branch/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h4>School Branch Details</h4>
 
 <div>
-    <h4>SchoolBranch</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -33,15 +32,6 @@
         <dd>
             @Html.DisplayFor(model => model.PhoneNumbers)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DateOfCreation)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DateOfCreation)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.IsActive)
         </dt>
