--- a/EduPortal/Views/Lecture/Details.cshtml
+++ b/EduPortal/Views/Lecture/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h4>Lecture Details</h4>
 
 <div>
-    <h4>Lecture</h4>
+ 
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -51,11 +51,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DateOfCreation)
+            @Html.DisplayNameFor(model => model.Subject)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DateOfCreation)
+            @Html.DisplayFor(model => model.Subject)
         </dd>
 
         <dt>
