--- a/EduPortal/Views/School/Details.cshtml
+++ b/EduPortal/Views/School/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EduPortal.Core.Entity.School
 
 <div>
-    <h4>School</h4>
+    <h4>School Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -26,14 +26,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.SchoolType)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DateOfCreation)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DateOfCreation)
         </dd>
 
         <dt>
