--- a/EduPortal/Views/Branch/Create.cshtml
+++ b/EduPortal/Views/Branch/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h4>Create School Branch</h4>
 
 @using (Html.BeginForm()) 
 {
@@ -38,15 +38,7 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.DateOfCreation, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DateOfCreation, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DateOfCreation, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
+       <div class="form-group">
             @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
