--- a/EduPortal/Views/Branch/Index.cshtml
+++ b/EduPortal/Views/Branch/Index.cshtml
@@ -4,11 +4,8 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h4>School Branch Report</h4>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -19,9 +16,6 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.PhoneNumbers)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateOfCreation)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.IsActive)
@@ -39,9 +33,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.PhoneNumbers)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateOfCreation)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.IsActive)
@@ -62,3 +53,7 @@
 }
 
 </table>
+
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
