--- a/EduPortal/Views/ClassLevel/Index.cshtml
+++ b/EduPortal/Views/ClassLevel/Index.cshtml
@@ -4,17 +4,14 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<h4>Class Level Report</h4>
 <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DateOfCreation)
+            @Html.DisplayNameFor(model => model.SchoolBranch)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.IsActive)
@@ -28,7 +25,7 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.DateOfCreation)
+            @Html.DisplayFor(modelItem => item.SchoolBranch)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.IsActive)
@@ -49,3 +46,6 @@
 }
 
 </table>
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
