--- a/EduPortal/Views/Lecture/Index.cshtml
+++ b/EduPortal/Views/Lecture/Index.cshtml
@@ -4,11 +4,9 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h4>Lecture Report</h4>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
 <table class="table">
     <tr>
         <th>
@@ -16,6 +14,9 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.LectureNumberInWeek)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Subject)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Date)
@@ -26,9 +27,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Content)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateOfCreation)
-        </th>
+        
         <th>
             @Html.DisplayNameFor(model => model.IsActive)
         </th>
@@ -44,6 +43,9 @@
             @Html.DisplayFor(modelItem => item.LectureNumberInWeek)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.Subject)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.Date)
         </td>
         <td>
@@ -51,9 +53,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Content)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateOfCreation)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.IsActive)
@@ -74,3 +73,6 @@
 }
 
 </table>
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
