--- a/EduPortal/Views/School/Edit.cshtml
+++ b/EduPortal/Views/School/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h4>Edit School</h4>
 
 @using (Html.BeginForm())
 {
@@ -37,14 +37,6 @@
             <div class="col-md-10">
                 @Html.EnumDropDownListFor(model => model.SchoolType, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.SchoolType, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DateOfCreation, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DateOfCreation, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DateOfCreation, "", new { @class = "text-danger" })
             </div>
         </div>
 
