--- a/EduPortal/Views/Subject/Edit.cshtml
+++ b/EduPortal/Views/Subject/Edit.cshtml
@@ -43,7 +43,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ClassLevel, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ClassLevelId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.ClassLevelId, new SelectList(ViewBag.ClassLevel, "ID", "Name"), new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ClassLevel, "", new { @class = "text-danger" })
             </div>
         </div>
